<resources>
    <string name="app_name">Lista Spesa</string>
    <string name="logged_user">LOGGED_USER</string>
    <string name="logged_user_group">LOGGED_USER_GROUP</string>
    <string name="logged_user_templates">LOGGED_USER_TEMPLATES</string>
    <string name="logged_user_list">LOGGED_USER_LIST</string>
    <string name="is_user_logged">IS_USER_LOGGED</string>
    <string name="is_user_part_of_a_group">IS_USER_PART_OF_A_GROUP</string>
    <string name="is_user_creating_group">IS_USER_CREATING_GROUP</string>
    <string name="is_user_creating_template">IS_USER_CREATING_TEMPLATE</string>
    <string name="is_user_creating_list">IS_USER_CREATING_LIST</string>
    <string name="has_user_templates">HAS_USER_TEMPLATES</string>
    <string name="has_user_list">HAS_USER_LIST</string>
    <string name="shopping_list_state">SHOPPING_LIST_STATE</string>
    <string name="user_in_charge">USER_IN_CHARGE</string>
    <string name="are_there_products_not_found">ARE_THERE_PRODUCTS_NOT_FOUND</string>
    <string name="products_not_found">PRODUCTS_NOT_FOUND</string>
    <string name="supermarket_list">SUPERMARKET_LIST</string>
    <string name="group_products">GROUP_PRODUCTS</string>
    <string name="has_user_supermarkets">HAS_USER_SUPERMARKETS</string>
    <string name="is_user_creating_supermarkets">IS_USER_CREATING_SUPERMARKETS</string>
    <string name="welcome_back_user">Bentornato, </string>
    <string name="login_button">Accedi</string>
    <string name="register_button">Registrati</string>
    <string name="welcome_message_top">Benvenuto!</string>
    <string name="welcome_message_detail">Sei già un utente? Effettua il login! Oppure registrati.</string>
    <string name="username">Nome utente</string>
    <string name="password">Password</string>
    <string name="login_OK">Login effettuato con successo!</string>
    <string name="login_KO_no_user">L\'utente inserito non esiste.</string>
    <string name="login_KO_wrong_password">La coppia utente/password inserita non è valida.</string>
    <string name="address">Indirizzo</string>
    <string name="empty_username_error">Inserisci un nome utente</string>
    <string name="empty_password_error">Inserisci una password</string>
    <string name="empty_address_error">Inserisci un indirizzo</string>
    <string name="USER_KEY">username</string>
    <string name="PASS_KEY">password</string>
    <string name="ADDR_KEY">address</string>
    <string name="insertion_OK">Utente aggiunto con successo!</string>
    <string name="insertion_KO">Si sono verificati problemi in fase di aggiunta.</string>
    <string name="username_in_use">Il nome utente inserito è già in uso. Scegline un altro.</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="tab_name_supermarket">Supermercati</string>
    <string name="tab_name_templates">Template</string>
    <string name="tab_name_list">Lista</string>
    <string name="tab_name_group">Gruppo</string>
    <string name="alert_exit_title">Uscire dall\'applicazione?</string>
    <string name="alert_exit_message">I tuoi dati non andranno persi.</string>
    <string name="no_group_message">Non fai parte di nessun gruppo.\nCrea un gruppo per condividere la lista della spesa.</string>
    <string name="create_new_group_button">Crea nuovo gruppo</string>
    <string name="group_name_hint">Inserisci il nome del gruppo…</string>
    <string name="create_group_toolbar">Crea gruppo</string>
    <string name="group_creation_OK">Gruppo creato con successo!</string>
    <string name="group_creation_KO_no_name">Inserisci il nome del gruppo.</string>
    <string name="group_creation_KO_no_users">Seleziona almeno un utente.</string>
    <string name="remote_group_creation_error">Errore nella creazione del gruppo sul database.</string>
    <string name="no_users_message">Sei l\'unico utente dell\'applicazione!\nConsigliala ai tuoi amici!</string>
    <string name="loading_list_message">Sto cercando gli utenti più vicini a te...</string>
    <string name="add_toolbar">Aggiunti utenti</string>
    <string name="add_OK">Inserimento avvenuto con successo!</string>
    <string name="add_KO_no_users">Seleziona almeno un utente.</string>
    <string name="no_users_to_add">Tutti gli utenti dell\'applicazione\nfanno già parte del tuo gruppo!</string>
    <string name="logout_dialog">Sei sicuro di voler uscire?</string>
    <string name="logout_action">Logout</string>
    <string name="delete_dialog">Sei sicuro di voler eliminare il prodotto?</string>
    <string name="delete_Action">Elimina</string>
    <string name="cancel_Action">Annulla</string>
    <string name="confirm">Conferma</string>
    <string name="cancel">Annulla</string>
    <string name="empty_group_error">Il nome del gruppo non può essere vuoto.</string>
    <string name="same_name_warning">Il nome inserito è identico al precedente.</string>
    <string name="edit_group_toolbar">Modifica nome del gruppo</string>
    <string name="success_feedback">Modifica avvenuta con successo!</string>
    <string name="empty_field_error">Questo campo non può essere vuoto</string>
    <string name="success_feedback_product">Inserimento avvenuto con successo!</string>
    <string name="no_templates_message">Il tuo gruppo non ha ancora definito dei template.\nI template ti aiutano a creare più velocemente la lista della spesa.</string>
    <string name="no_template_no_group_message">Non fai parte di nessun gruppo.\nCrea un gruppo per poter definire dei template.</string>
    <string name="go_to_group_creation">Crea gruppo</string>
    <string name="create_new_template_button">Crea nuovo template</string>
    <string name="template_name_hint">Inserisci il nome del template…</string>
    <string name="create_template_toolbar">Crea template</string>
    <string name="template_creation_OK">Template creato con successo!</string>
    <string name="template_creation_KO_no_name">Il nome del template non può essere vuoto.</string>
    <string name="template_creation_KO_no_products">Seleziona almeno un prodotto.</string>
    <string name="template_creation_KO_same_name">Il nome inserito è già usato da un altro template.</string>
    <string name="no_description_message">Nessuna descrizione fornita.</string>
    <string name="action_search">Cerca</string>
    <string name="action_search_hint">Filtra prodotti…</string>
    <string name="manage_fragment_toolbar">I tuoi template</string>
    <string name="template_deletion_ok">Eliminazione avvenuta correttamente.</string>
    <string name="manage_products_toolbar">I tuoi prodotti</string>
    <string name="info_produts_matrix">Possono essere modificati o eliminati solo i prodotti definiti dal tuo gruppo.</string>
    <string name="edit_ok">Modifica avvenuta con successo!</string>
    <string name="exit_dialog_message">Sono presenti modifiche non salvate. Uscire comunque?</string>
    <string name="exit_action">Esci</string>
    <string name="cancel_action">Annulla</string>
    <string name="toast_list_with_old_products">Sono stati aggiunti automaticamente i prodotti non trovati nell\'ultima spesa.</string>
    <string name="add_template_products_toolbar">Aggiungi prodotti</string>
    <string name="product_name_hint">Nome prodotto</string>
    <string name="product_brand_hint">Marca prodotto</string>
    <string name="product_description_hint">(Opzionale) Descrizione</string>
    <string name="no_more_products">Hai già aggiunto tutti i prodotti disponibili!</string>
    <string name="insert_product_toolbar">Inserisci nuovo prodotto</string>
    <string name="modify_product_toolbar">Modifica prodotto</string>
    <string name="generic_error">Errore sconosciuto.</string>
    <string name="connection_error">Errore di connessione al database.</string>
    <string name="no_list_message">Il tuo gruppo non ha ancora nessuna lista della spesa in preparazione.</string>
    <string name="no_list_no_group_message">Non fai parte di nessun gruppo.\nCrea un gruppo per poter definire dei template e la tua lista della spesa.</string>
    <string name="no_list_no_template_message">Il tuo gruppo non ha ancora definito dei template.\nCrea un template per velocizzare la creazione della lista della spesa.</string>
    <string name="create_new_list_button">Crea lista da Template</string>
    <string name="create_new_list_empty_button">Crea lista vuota</string>
    <string name="create_new_list_button_alt">La lista della spesa è già stata presa in carico!\n\nPuoi creare una nuova lista della spesa.\nI prodotti eventualmente non trovati dal tuo compagno verranno inseriti automaticamente.</string>
    <string name="empty_list">La lista della spesa corrente è vuota.\nPremi + per aggiungere prodotti.</string>
    <string name="create_list_products_not_found">Crea lista con i prodotti non trovati</string>
    <string name="products_not_found_present_message">Sono presenti prodotti non trovati nella scorsa spesa, verranno aggiunti automaticamente alla prossima lista.</string>
    <string name="list_saved">La lista è stata salvata.</string>
    <string name="toolbar_title">Lista della spesa</string>
    <string name="delete_list_dialog">Sei sicuro di volere eliminare la lista?</string>
    <string name="delete_action">Elimina</string>
    <string name="exit_without_saving_title">Uscire?</string>
    <string name="exit_without_saving_dialog">Le modifiche alla lista non verranno salvate. Uscire comunque?</string>
    <string name="create_list_fragment_toolbar">Selezione template</string>
    <string name="grocery_toolbar_title">Fai la spesa!</string>
    <string name="list_completed">Tutti i prodotti della lista\nsono nel tuo carrello!</string>
    <string name="list_completed_button">Crea una nuova lista</string>
    <string name="end_shopping_title">Concludere gli acquisti?</string>
    <string name="end_shopping_dialog">Alcuni prodotti della lista non sono presenti nel tuo carrello. Questi prodotti saranno aggiunti in automatico alla prossima lista della spesa.</string>
    <string name="end_shopping_select_products_alert">Attenzione: ci sono alcuni prodotti selezionati ma non aggiunti al carrello!</string>
    <string name="end_shopping_action">Concludi</string>
    <string name="list_completed_new_list">Il tuo gruppo ha già iniziato una nuova lista!</string>
    <string name="no_supermarket_selected_toast">Seleziona un supermercato.</string>
    <string name="instructions">Spunta i prodotti che trovi e tocca l\'icona del carrello.</string>
    <string name="no_supermarket_message">Il tuo gruppo non ha definito dei supermercati.\nAggiungine uno!</string>
    <string name="no_supermarket_no_group_message">Non fai parte di nessun gruppo.\nCrea un gruppo per poter aggiungere supermercati.</string>
    <string name="create_new_supermarket_button">Aggiungi un supermercato</string>
    <string name="supermarket_name_hint">Nome supermercato</string>
    <string name="supermarket_address_hint">Indirizzo supermercato</string>
    <string name="add_supermarket_toolbar">Aggiungi supermercato</string>
    <string name="empty_supermarket_name">Inserisci il nome del supermercato</string>
    <string name="same_supermarket_name">Il tuo gruppo ha già un supermercato con questo nome</string>
    <string name="empty_supermarket_address">Inserisci l\'indirizzo del supermercato</string>
    <string name="location_resolution_error">Errore nella risoluzione dell\'indirizzo</string>
    <string name="supermarket_added">Supermercato aggiunto con successo!</string>
    <string name="manage_supermarket_toolbat">I tuoi supermercati</string>
</resources>