<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="24dp">

    <ImageView
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:src="@drawable/ic_list_blue_24dp"/>

    <Space
        android:layout_width="0dp"
        android:layout_height="24dp" />

    <TextView
        android:id="@+id/emptyTemplateMessageSL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_list_message"
        android:textColor="@color/blackText"
        android:textAlignment="center"
        android:textSize="16sp"/>

    <Space
        android:layout_width="0dp"
        android:layout_height="24dp" />

    <Button
        android:id="@+id/createNewListButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="@dimen/button_elevation"
        android:text="@string/create_new_list_button"
        android:backgroundTint="@color/button_background_tint"/>

    <Button
        android:id="@+id/goToGroupCreationButtonSL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="@dimen/button_elevation"
        android:text="@string/go_to_group_creation"
        android:visibility="gone"/>

    <Button
        android:id="@+id/goToTemplateCreation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="@dimen/button_elevation"
        android:text="@string/create_new_template_button"
        android:visibility="gone"/>

</LinearLayout>
