<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="24dp">

    <ImageView
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:src="@drawable/ic_store_mall_directory_blue_24dp" />

    <Space
        android:layout_width="0dp"
        android:layout_height="24dp" />

    <TextView
        android:id="@+id/emptySupermarketMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_supermarket_message"
        android:textColor="@color/blackText"
        android:textAlignment="center"
        android:textSize="16sp" />

    <Space
        android:layout_width="0dp"
        android:layout_height="24dp" />

    <Button
        android:id="@+id/createNewSupermarketButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/button_background_tint"
        android:elevation="@dimen/button_elevation"
        android:text="@string/create_new_supermarket_button" />

    <Button
        android:id="@+id/goToGroupCreationButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="@dimen/button_elevation"
        android:text="@string/go_to_group_creation"
        android:visibility="gone" />

</LinearLayout>
