<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mobile.paolo.listaspesa.view.home.group.InsertProductsActivity">

    <!-- Dummy item to prevent TextInputLayout from receiving focus -->
    <LinearLayout
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_width="0px"
        android:layout_height="0px"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/insertProductToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            android:titleTextColor="@color/blackText"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="24dp" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/editNameTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:nextFocusUp="@id/editNameTextInputLayout"
            android:nextFocusLeft="@id/editNameTextInputLayout">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editNameField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/product_name_hint"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/editBrandTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:nextFocusUp="@id/editNameTextInputLayout"
            android:nextFocusLeft="@id/editNameTextInputLayout">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/editBrandField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/product_brand_hint"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/editDescriptionTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:nextFocusUp="@id/editNameTextInputLayout"
        android:nextFocusLeft="@id/editNameTextInputLayout">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/editDescriptionField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/product_description_hint"/>

    </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="100dp"
        android:layout_width="300dp"
        android:layout_height="110dp"
        android:layout_gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/confirmButtonInsert"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:elevation="@dimen/button_elevation"
            android:text="@string/confirm" />

        <Button
            android:id="@+id/cancelButtonInsert"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:backgroundTint="@color/materialGrey400"
            android:elevation="@dimen/button_elevation"
            android:text="@string/cancel" />

    </LinearLayout>

</FrameLayout>