<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mobile.paolo.listaspesa.view.home.group.EditGroupActivity">

    <!-- Dummy item to prevent TextInputLayout from receiving focus -->
    <LinearLayout
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_width="0px"
        android:layout_height="0px" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/editGroupToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            android:titleTextColor="@color/blackText" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="24dp" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/editNameTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:nextFocusUp="@id/editNameTextInputLayout"
            android:nextFocusLeft="@id/editNameTextInputLayout">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editNameField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/group_name_hint" />

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">

        <Button
            android:id="@+id/confirmButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:elevation="@dimen/button_elevation"
            android:text="@string/confirm" />

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:elevation="@dimen/button_elevation"
            android:backgroundTint="@color/materialGrey400"
            android:text="@string/cancel" />

    </LinearLayout>

</FrameLayout>